# execute-xcm-parachain

./: .gitignore  Cargo.toml  README.md  package.json
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs
polkadot-launch/: config.json
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
