[package]
name = 'parachain-collator'
authors = ['Anonymous']
description = 'A new Cumulus FRAME-based Substrate node, ready for hacking.'
license = 'Unlicense'
version = '3.0.0'
homepage = 'https://substrate.dev'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'
edition = '2018'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }

[[bin]]
name = 'parachain-collator'

[features]
default = []
runtime-benchmarks = ['parachain-runtime/runtime-benchmarks']

[dependencies]
derive_more = '0.99.2'
log = '0.4.14'
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = '0.3.8'
serde = { version = '1.0.119', features = ['derive'] }
hex-literal = '0.3.1'

# RPC related Dependencies
jsonrpc-core = '15.1.0'

# Local Dependencies
parachain-runtime = { path = '../runtime' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }

pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-service = { git = 'https://github.com/paritytech/substrate', features = ['wasmtime'] , branch = "cmichi-tmp-experiment" }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "cmichi-tmp-experiment" }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = "hc-contract-experiment-patched-v0.9.9" }

# Polkadot dependencies
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }
polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = "hc-contract-experiment-patched-v0.9.9" }

# Contracts specific packages
#pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false , branch = 'polkadot-v0.9.9'}
#pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false , branch = 'polkadot-v0.9.9'}
#pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc-runtime-api", default-features = false , branch = 'polkadot-v0.9.9'}

pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false , branch = "cmichi-tmp-experiment" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-primitives", default-features = false , branch = "cmichi-tmp-experiment" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc-runtime-api", default-features = false , branch = "cmichi-tmp-experiment" }
